--- a/ConversationTracker/ConversationTracker/packages.config
+++ b/ConversationTracker/ConversationTracker/packages.config
@@ -13,6 +13,8 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
-  <package id="RavenDB.Client" version="3.0.3660" targetFramework="net45" />
 </packages>
