Found the bug and fixed the app to use MongoDB
The bug was the string generator ID was not running.

--- a/ConversationTracker/ConversationTracker/bin/ConversationTracker.dll.config
+++ b/ConversationTracker/ConversationTracker/bin/ConversationTracker.dll.config
@@ -11,6 +11,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MONGOLAB_URI" value="mongodb://appharbor_aa7edfc9-7877-4fc9-8203-becd8809b2ff:ij4142l2i231i7eloqopoq2ut5@ds031912.mongolab.com:31912/appharbor_aa7edfc9-7877-4fc9-8203-becd8809b2ff"/>
   </appSettings>
 
   <system.web>
