--- a/ConversationTracker/ConversationTracker/ConversationTracker.csproj
+++ b/ConversationTracker/ConversationTracker/ConversationTracker.csproj
@@ -124,7 +124,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppHarborDB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\ConversationLinqRepo.cs" />
     <Compile Include="Models\ConversationTrackerObject.cs" />
+    <Compile Include="Models\IConversationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -925,7 +927,9 @@
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\npm.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
