--- a/ConversationTracker/ConversationTracker/Web.config
+++ b/ConversationTracker/ConversationTracker/Web.config
@@ -1,10 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="db4dbef5644331495092c7a4930039d3daConnectionString"
+      connectionString="Data Source=4dbef564-4331-4950-92c7-a4930039d3da.sqlserver.sequelizer.com;Initial Catalog=db4dbef5644331495092c7a4930039d3da;User ID=qfebkueovmkacrgz"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
