--- a/ConversationTracker/ConversationTracker/Web.config
+++ b/ConversationTracker/ConversationTracker/Web.config
@@ -6,9 +6,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="db4dbef5644331495092c7a4930039d3daConnectionString"
-      connectionString="Data Source=4dbef564-4331-4950-92c7-a4930039d3da.sqlserver.sequelizer.com;Initial Catalog=db4dbef5644331495092c7a4930039d3da;User ID=qfebkueovmkacrgz"
-      providerName="System.Data.SqlClient" />
+    <add name="ConversationTrackerConnectionString" connectionString="Data Source=LT-PC\SQLEXPRESS;Initial Catalog=ConversationTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
