--- a/ConversationTracker/ConversationTracker/packages.config
+++ b/ConversationTracker/ConversationTracker/packages.config
@@ -17,4 +17,5 @@
   <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="RavenDB.Client" version="3.0.3660" targetFramework="net45" />
 </packages>
