--- a/ConversationTracker/ConversationTracker/packages.config
+++ b/ConversationTracker/ConversationTracker/packages.config
@@ -3,6 +3,7 @@
   <package id="Angular.UI.Bootstrap" version="0.12.1" targetFramework="net45" />
   <package id="angularjs" version="1.3.15" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
